force-app/main/default/objects/Commands_and_Queries__mdt/Commands_and_Queries__mdt.object-meta.xml
<CustomObject>
    <description>Commands and Queries</description>
    <label>Command and Query</label>
    <pluralLabel>Commands and Queries</pluralLabel>
</CustomObject>