force-app/main/default/objects/Commands_and_Queries__mdt/fields/Handler_Type__c.field-meta.xml
<CustomField>
    <fullName>Handler_Type__c</fullName>
    <description>Handler Type .. must end in &quot;Handler&quot;</description>
    <inlineHelpText>Handler Type .. must end in &quot;Handler&quot;</inlineHelpText>
    <label>Handler Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>